# dNaty

./: .gitignore  BENCHMARKS_EDGE.md  BENCHMARKS_REAL.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DESIGN_NEW.md  Dockerfile  FRONTEND_SETUP.md  LAUNCH_CHECKLIST.md  LICENSE  MARKETING.md  METHODOLOGY.md  Makefile  README.md  ROADMAP_v1.1.x.md  check_mobilenet.py  dnaty-paper-real.md  dnaty_business_benchmark.ipynb  dnaty_colab.ipynb  dnaty_colab_worker.ipynb  dnaty_competitive_analysis.html  dnaty_paper.html  docker-compose.yml  example_compress.py  fix_mobilenet.txt  make_zip.py  presentation_ceia.html  prometheus.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-lib.txt  requirements-saas.txt  requirements.txt  run_backend_local.ps1  run_business_test.py  run_ecommerce_bench.py  run_experiments.py  run_v5_full.py  (+3 more)
.claude/: settings.local.json
case_studies/: case_study_01_intrusion_detection.py  case_study_02_epilepsy_wearable.py
dnaty/: __init__.py  _compress_helpers.py  compress.py  logging_config.py  result.py
docs/: CLEANUP_NOTES.md  EXPERIMENT_PROTOCOL.md  ROADMAP_v1.2.x.md  USER_MANUAL.md
experiments/: __init__.py  prepare_datasets.py  run.py
notebooks/: benchmark_cpu_latency.py  colab_cifar100_notebook.ipynb  colab_cifar100_runner.py  colab_imagenet_notebook.ipynb  colab_imagenet_simple.ipynb  colab_imagenet_simple_FIXED.ipynb  dnaty_v52_gpu.ipynb  imagenet_benchmark.py  kaggle_dnaty_showcase.ipynb  plot_cpu_latency.py
paper/: PAPER_DRAFT.md
results/: benchmark_cnn_v1_2_x.json  benchmark_extra.json  benchmark_iot.json  benchmark_market_real.json  benchmark_v1_2_x.json  latency_dataset.json  latency_predictor.json  prove_it_curves.csv  prove_it_results.json
scripts/: README.md  bench_params.py  benchmark_cnn_v1_2_x.py  benchmark_extra.py  benchmark_heavy.py  benchmark_heavy_part2.py  benchmark_iot.py  benchmark_kaggle.py  benchmark_market_real.py  build_latency_dataset.py  cifar_proof.py  cl_proof.py  demo_compress.py  fetch_real_datasets.py  generate_charts.py  generate_demo_video.py  generate_paper.py  generate_terminal_video.py  github_setup.py  prove_it.py  real_benchmarks.py  real_benchmarks_uci.py  stress_adversarial.py  test_all_formats.py  test_compress_real.py  test_datasets.py  test_zip_structures.py  time_compress.py  train.py  validate_v1_2_x.py  warm_start_demo.py
tests/: __init__.py  test_auth_rate_limit.py  test_benchmark_market.py  test_compress.py  (+17 more)
(+45 files in other folders)
